AUGREL/src/objects/UC_Unbound_Field_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Add input fields to publishers which do not correspond to a field in the schema</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Element__c</fullName>
        <description>Only supported elements are: InputText, Select</description>
        <label>HTML Element</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UC Unbound Field List</label>
</CustomObject>